# real_time/front_app/src/services/models/friend-request-resp-dto.ts
@@ -1,0 +1,11 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface FriendRequestRespDto {
+  accepted?: boolean;
+  answered?: boolean;
+  id?: number;
+  sender?: string;
+  sentAt?: string;
+}
