# real_time/front_app/src/services/models/page-response-friend-request-resp-dto.ts
@@ -1,0 +1,14 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+import { FriendRequestRespDto } from '../models/friend-request-resp-dto';
+export interface PageResponseFriendRequestRespDto {
+  content?: Array<FriendRequestRespDto>;
+  first?: boolean;
+  last?: boolean;
+  number?: number;
+  size?: number;
+  totalElements?: number;
+  totalPages?: number;
+}
