# real_time/front_app/src/services/models/page-response-user-resp-dto.ts
@@ -1,0 +1,14 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+import { UserRespDto } from '../models/user-resp-dto';
+export interface PageResponseUserRespDto {
+  content?: Array<UserRespDto>;
+  first?: boolean;
+  last?: boolean;
+  number?: number;
+  size?: number;
+  totalElements?: number;
+  totalPages?: number;
+}
