# real_time/front_app/src/services/models/user-resp-dto.ts
@@ -1,0 +1,11 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface UserRespDto {
+  firstname?: string;
+  friend?: boolean;
+  id?: number;
+  joined?: string;
+  lastname?: string;
+}
